Bug 188637 - Stars move drastically when they move from below the ground to above horizon
Summary: Stars move drastically when they move from below the ground to above horizon
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Akarsh Simha
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-04-02 06:59 UTC by Prashant
Modified: 2009-10-04 01:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Prashant 2009-04-02 06:59:36 UTC
Version:           1.5.0 (using KDE 4.2.0)
OS:                Linux
Installed from:    Debian stable Packages

When you switch "off" ground, you can observe that objects when below the ground, close to horizon move drastically with respect to the rest of the stars/objects.
To reproduce, just switch off ground and switch on constellation boundaries(just to see the lines changing clearly).
Its a fresh install, no plugins.
Comment 1 Médéric Boquien 2009-04-13 06:06:40 UTC
This is because of the refraction. One solution would be to deactivate refraction when the horizon is not displayed, though i am not sure it is the best one.
Comment 2 Akarsh Simha 2009-07-07 06:55:45 UTC
Jason was considering making a smooth transition for refraction below the horizon.

Or we could disable refraction correction when the horizon is switched off - would that make sense?

The easiest thing, of course, would be to leave this as it is - which seems fine to me.
Comment 3 Prashant 2009-07-07 08:11:00 UTC
I think the smooth transition option seems best.
Even though it means displaying slightly incorrect locations of stars below the horizon, we don't normally see stars below the horizon and hence can't see the refraction.
One way of making the smooth transition could be to allow for refraction even below the ground since if we could actually see stars below the horizon, atmosphere would cause refraction.
Comment 4 Akarsh Simha 2009-09-27 15:31:31 UTC
I think a better thing to do is to disable refraction corrections upon switching the horizon on. This way, we will not represent something that is incorrect. I think it is fair that we don't make an effort to retain refraction corrections in an unreal situation where there is no horizon.

We could issue a Warning to the user (with a "Don't show this warning again" checkbox) that informs the user that the refraction corrections are going to temporarily switched off as long as the horizon is disabled)
Comment 5 Akarsh Simha 2009-10-04 01:21:09 UTC
SVN commit 1031093 by asimha:

Fixing bug 188637 by implementing the following two features:

1. Ignore refraction corrections when the horizon is switched off

2. Issue an information message about this when the horizon is
   switched off

Many thanks to Adhiraj Alai who contributed to this fix.

CCMAIL: kstars-devel@kde.org
BUG: 188637



 M  +8 -0      kstarsactions.cpp  
 M  +2 -1      skymap.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1031093