Fixing bug 188637 by implementing the following two features:

1. Ignore refraction corrections when the horizon is switched off

2. Issue an information message about this when the horizon is
   switched off

Many thanks to Adhiraj Alai who contributed to this fix.

CCMAIL: kstars-devel@kde.org
BUG: 188637


svn path=/trunk/KDE/kdeedu/kstars/; revision=1031093